# UniversalGraph

./: CMakeLists.txt  README.md  gsum  gsum_estimation.cpp  heavy  heavy_hitter_detection.cpp
Common/: BOBHash32.cpp  BOBHash32.h  Gsum.hpp  Param.h  Util.h  hashTable.h  hashfunction.h
Dataset/: Dataset.hpp
Detector/: CorrectDetector.hpp  DetectorAbstract.h
Strawman/: CountHeap.hpp  HeapUnivMon.hpp  UnivMon.hpp
UniversalGraph/: ColdLayer.hpp  ColdPart.hpp  HotPart.hpp  UniversalGraph.hpp
